--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,7 @@ html,body{
   height: 10vh;
   padding: 20px;
   margin-top: 1rem;
-  color: var(--uno-3);
+  color: var(--duo-1);
 }
 .left-header{
   display: flex;
@@ -86,7 +86,7 @@ html,body{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  column-gap: 1rem;
+  column-gap: 2rem;
 }
 .right-header i{
   font-size: 1.3rem;
@@ -102,6 +102,10 @@ html,body{
   align-items: center;
   justify-content: space-between;
   border-radius: 5px;
+  cursor: pointer;
+}
+.setting-container div div:hover{
+  color: var(--duo-1);
 }
 
 .left-setting,
@@ -120,6 +124,7 @@ html,body{
 .right-setting{
   border: none;
 }
+
 
 /* text section */
 
@@ -219,11 +224,13 @@ span {
   display: flex;
   align-items: center;
   column-gap: 1rem;
+  cursor: pointer;
 }
 .right-footer{
   display: flex;
   align-items: center;
   column-gap: 1rem;
+  cursor: pointer;
 }
 
 /* shortcut section */
