--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,9 +102,9 @@ html,body{
   align-items: center;
   justify-content: space-between;
   border-radius: 5px;
-  cursor: pointer;
 }
 .setting-container div div:hover{
+  cursor: pointer;
   color: var(--duo-1);
 }
 
@@ -268,6 +268,53 @@ span {
 .device-warning p{
   width: 50vw;
   font-size: 2rem;
+}
+
+
+/* sidebar */
+.sidebar{
+  height: 80vh;
+  width: 20vw;
+  position: absolute;
+  right: -18vw;
+  top: 9vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--uno-5);
+}
+.logo-col{
+  width: 100%;
+  height: 8rem;
+  border-bottom: 1px solid var(--uno-5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.logo-col p{
+  font-size: 1.7rem;
+  font-weight: 700;
+  color: var(--uno-1);
+  margin-left: 1rem;
+}
+.logo-col img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  aspect-ratio: 1/1;
+  margin-right: 10px;
+}
+.col{
+  width: 100%;
+  padding: 1rem 3rem;
+  font-size: 1.3rem;
+  border-bottom: 1px solid var(--uno-5);
+  display: flex;
+  align-items: baseline;
+  column-gap: 1rem;
+}
+.col i{
+  font-size: 1.5rem;
 }
 
 @media (max-width: 1400px) {
