--- a/styles/profile.css
+++ b/styles/profile.css
@@ -53,161 +53,44 @@ html,body{
 .main{
   width: 70vw;
   height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   position: relative;
   margin-right: 3rem;
+  padding: 4rem;
 }
-/* header section */
-.header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.main h1{
   width: 100%;
-  height: 10vh;
-  padding: 20px;
-  margin-top: 1rem;
-  color: var(--duo-1);
-}
-.left-header{
-  display: flex;
-  align-items: center;
-}
-.left-header img{
-  width: 100%;
-  height: 5vh;
-  object-fit: contain;
-}
-.left-header h3{
-  font-size: 1.8rem;
-  width: 100%;
-  margin: 0 5px;
-}
-
-.right-header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 2rem;
-  margin-right: 2rem;
-}
-.right-header i{
-  font-size: 1.3rem;
-}
-
-/* setting container */
-.setting-container{
-  width: 40vw;
-  padding: 10px;
-  background: var(--uno-5);
-  margin-top: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 5px;
-}
-.setting-container div div:hover{
-  cursor: pointer;
-  color: var(--duo-1);
-}
-
-.left-setting,
-.middle-setting,
-.right-setting{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  font-size: .9rem;
+  font-size: 3.5rem;
   font-weight: 700;
-  width: 100%;
-  border-right: 4px solid var(--duo-2);
-  padding: 0 7px;
+  color: var(--uno-1);
+  margin-bottom: 2rem;
+}
+.stat-col{
+  margin: 1rem 0;
+}
+.stat-col h1{
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: var(--uno-3);
+}
+.stats-grid-container{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 1rem;
+}
+.stat-grid{
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  row-gap: .7rem;
+  border: 1px solid var(--uno-3);
+}
+.stat-grid p{
   color: var(--uno-2);
 }
-.right-setting{
-  border: none;
-}
-
-
-/* text section */
-
-.text-section{
-  width: 60vw;
-  height: 28vh;
-  margin-top: 2rem;
-  font-size: 2.4rem;
-  font-weight: 700;
-  text-align: center;
-}
-/* keyboard */
-
-span {
-  display: block;
-  margin-top: -5px;
-}
-
-.keyboard {
-  margin: 0px auto;
-  border: 3px solid var(--uno-2);
-  border-radius: 10px;
-  padding: 10px;
-}
-
-.row {
-  margin-top: 2px;
-  overflow: hidden;
-}
-
-.key {
-  width: 50px;
-  height: 50px;
-  float: left;
-  cursor: pointer;
-  color: var(--uno-1);
-  border: 2px solid var(--uno-2);
-  line-height: 48px;
-  text-align: center;
-  margin-left: 2px;
-  border-radius: 4px;
-}
-
-.key__symbols {
-  line-height: 28px;
-}
-
-.key__delete {
-  width: 100px;
-}
-
-.key__oneandhalf {
-  width: 75px;
-}
-
-
-.key__enter {
-  width: 112px;
-}
-
-.key__caps {
-  width: 90px;
-}
-
-.key__shift-left {
-  width: 100px;
-}
-
-.key__spacebar {
-  width: 300px;
-}
-
-.key__bottom-funct {
-  width: 70px;
-}
-
-
-.feather {
-  margin-top: 10px;
+.stat-grid h2{
+  font-size: 2rem;
 }
 /* footer */
 .footer{
@@ -221,7 +104,7 @@ span {
   position: absolute;
   bottom: 0;
   font-size: 1.2rem;
-  color: var(--uno-4);
+  color: var(--uno-3);
   font-weight: 700;
 }
 .left-footer{
@@ -235,23 +118,6 @@ span {
   align-items: center;
   column-gap: 1rem;
   cursor: pointer;
-}
-
-/* shortcut section */
-.shortcut-display{
-  position: absolute;
-  display: flex;
-  align-items: center;
-  font-size: 1rem;
-  font-weight: 700;
-  color: var(--uno-4);
-  column-gap: 1rem;
-  bottom: 5vh;
-}
-.button-con{
-  padding: .5rem;
-  background-color: var(--uno-4);
-  color: #152238;
 }
 
 /* warning */
