--- a/styles/highscore.css
+++ b/styles/highscore.css
@@ -53,162 +53,59 @@ html,body{
 .main{
   width: 70vw;
   height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   position: relative;
   margin-right: 3rem;
+  padding: 4rem;
 }
-/* header section */
-.header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.main h1{
   width: 100%;
-  height: 10vh;
-  padding: 20px;
-  margin-top: 1rem;
-  color: var(--duo-1);
-}
-.left-header{
-  display: flex;
-  align-items: center;
-}
-.left-header img{
-  width: 100%;
-  height: 5vh;
-  object-fit: contain;
-}
-.left-header h3{
-  font-size: 1.8rem;
-  width: 100%;
-  margin: 0 5px;
-}
-
-.right-header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 2rem;
-  margin-right: 2rem;
-}
-.right-header i{
-  font-size: 1.3rem;
-}
-
-/* setting container */
-.setting-container{
-  width: 40vw;
-  padding: 10px;
-  background: var(--uno-5);
-  margin-top: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 5px;
-}
-.setting-container div div:hover{
-  cursor: pointer;
-  color: var(--duo-1);
-}
-
-.left-setting,
-.middle-setting,
-.right-setting{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  font-size: .9rem;
+  font-size: 3.5rem;
   font-weight: 700;
+  color: var(--uno-1);
+  margin-bottom: 1rem;
+}
+.ranking-container{
   width: 100%;
-  border-right: 4px solid var(--duo-2);
-  padding: 0 7px;
+  height: auto !important;
+}
+.ranking-container h1{
+  font-size: 2rem;
   color: var(--uno-2);
 }
-.right-setting{
-  border: none;
+
+.user-ranks{
+  width: 100%;
+  max-height: 60vh;
+  border: 1px solid var(--uno-5);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+  overflow: scroll;
+}
+.fixed-header{
+  position: absolute;
+  top: -10px;
+  background: var(--uno-3);
+  border-bottom: 1px solid var(--uno-5);
+}
+.rank-col,
+.fixed-header{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.3rem;
+  color: var(--duo-1);
+  padding: 8px 10px;
+  align-items: center;
 }
 
 
-/* text section */
-
-.text-section{
-  width: 60vw;
-  height: 28vh;
-  margin-top: 2rem;
-  font-size: 2.4rem;
-  font-weight: 700;
-  text-align: center;
-}
-/* keyboard */
-
-span {
-  display: block;
-  margin-top: -5px;
-}
-
-.keyboard {
-  margin: 0px auto;
-  border: 3px solid var(--uno-2);
-  border-radius: 10px;
-  padding: 10px;
-}
-
-.row {
-  margin-top: 2px;
-  overflow: hidden;
-}
-
-.key {
-  width: 50px;
-  height: 50px;
-  float: left;
-  cursor: pointer;
-  color: var(--uno-1);
-  border: 2px solid var(--uno-2);
-  line-height: 48px;
-  text-align: center;
-  margin-left: 2px;
-  border-radius: 4px;
-}
-
-.key__symbols {
-  line-height: 28px;
-}
-
-.key__delete {
-  width: 100px;
-}
-
-.key__oneandhalf {
-  width: 75px;
-}
 
 
-.key__enter {
-  width: 112px;
-}
-
-.key__caps {
-  width: 90px;
-}
-
-.key__shift-left {
-  width: 100px;
-}
-
-.key__spacebar {
-  width: 300px;
-}
-
-.key__bottom-funct {
-  width: 70px;
-}
 
 
-.feather {
-  margin-top: 10px;
-}
 /* footer */
 .footer{
   display: flex;
@@ -350,4 +247,3 @@ span {
     display: flex;
   }
 }
-
