--- a/styles/styles.css
+++ b/styles/styles.css
@@ -154,7 +154,7 @@ span {
   padding: 10px;
 }
 
-.row {
+.keys-row {
   margin-top: 2px;
   overflow: hidden;
 }
@@ -171,7 +171,11 @@ span {
   margin-left: 2px;
   border-radius: 4px;
 }
-
+.active{
+  background-color: var(--uno-2);
+  color: #152238;
+  font-weight: bold;
+}
 .key__symbols {
   line-height: 28px;
 }
