little fix little left

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -149,6 +149,9 @@ html,body{
   background-color: var(--duo-1);
   color: #152238;
 }
+.correct{
+  color: var(--uno-3);
+}
 /* keyboard */
 
 span {
