--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,8 +139,25 @@ html,body{
   font-size: 2.4rem;
   font-weight: 700;
   text-align: center;
+  position: relative;
 }
 
+.modal{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  padding: 8vh;
+  align-items: center;
+  color: var(--uno-3);
+  background-color: #152238;
+  z-index: 100000;
+  margin-bottom: 2rem;
+}
+.hide{
+  display: none;
+  z-index: -1000;
+}
 .text-section div{
   display: inline;
 }
