--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,14 +145,15 @@ html,body{
 .modal{
   width: 100%;
   height: 100%;
-  position: absolute;
   display: flex;
-  padding: 8vh;
+  position: absolute;
   align-items: center;
+  padding: 8vh;
   color: var(--uno-3);
   background-color: #152238;
   z-index: 100000;
   margin-bottom: 2rem;
+  left: 0;
 }
 .hide{
   display: none;
@@ -168,6 +169,9 @@ html,body{
 }
 .correct{
   color: var(--uno-3);
+}
+.wrong{
+  color: #ff6961;
 }
 /* keyboard */
 
