--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,7 +157,17 @@ html,body{
   margin-bottom: 2rem;
   left: 0;
 }
+.speed{
+  color: var(--uno-2);
+  font-size: 1.5rem;
+  font-weight: 700;
+  position: absolute;
+  bottom: .4rem;
+  left: 10rem;
+  left: 28vw;
+  bottom: 50vh;
 
+}
  
 
 
