--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Nunito:wght@200;300;400;600;700&family=Roboto:wght@400;500;700&display=swap');
 
 :root{
@@ -20,9 +21,12 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   text-decoration: none;
   outline: none; border: none;
+  -webkit-transition: all .1s linear;
+  -o-transition: all .1s linear;
   transition: all .1s linear;
   list-style-type: none;
   font-family: 'Nunito', sans-serif;
@@ -41,9 +45,15 @@ html,body{
 }
 
 .container{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -53,17 +63,30 @@ html,body{
 .main{
   width: 70vw;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
   margin-right: 3rem;
 }
 /* header section */
 .header{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   height: 10vh;
   padding: 20px;
@@ -71,13 +94,18 @@ html,body{
   color: var(--duo-1);
 }
 .left-header{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .left-header img{
   width: 100%;
   height: 5vh;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .left-header h3{
   font-size: 1.8rem;
@@ -86,10 +114,18 @@ html,body{
 }
 
 .right-header{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 2rem;
+     -moz-column-gap: 2rem;
+          column-gap: 2rem;
   margin-right: 2rem;
 }
 .right-header i{
@@ -102,9 +138,15 @@ html,body{
   padding: 10px;
   background: var(--uno-5);
   margin-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   border-radius: 5px;
 }
 .setting-container div div:hover{
@@ -115,9 +157,14 @@ html,body{
 .left-setting,
 .middle-setting,
 .right-setting{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   font-size: .9rem;
   font-weight: 700;
   width: 100%;
@@ -147,9 +194,13 @@ html,body{
 .modal{
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: absolute;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 8vh;
   color: var(--uno-3);
   background-color: #152238;
@@ -195,7 +246,6 @@ html,body{
 }
 .wrong{
   color: #ff6961;
-  background-color: var(--uno-5 );
 }
 /* keyboard */
 
@@ -272,9 +322,15 @@ span {
 }
 /* footer */
 .footer{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   height: 6vh;
   padding: 1rem 3rem;
@@ -286,27 +342,45 @@ span {
   font-weight: 700;
 }
 .left-footer{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  column-gap: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 1rem;
+     -moz-column-gap: 1rem;
+          column-gap: 1rem;
   cursor: pointer;
 }
 .right-footer{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  column-gap: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 1rem;
+     -moz-column-gap: 1rem;
+          column-gap: 1rem;
   cursor: pointer;
 }
 
 /* shortcut section */
 .shortcut-display{
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 1rem;
   font-weight: 700;
   color: var(--uno-4);
-  column-gap: 1rem;
+  -webkit-column-gap: 1rem;
+     -moz-column-gap: 1rem;
+          column-gap: 1rem;
   bottom: 5vh;
 }
 .button-con{
@@ -320,8 +394,11 @@ span {
   width: 100vw;
   height: 100vh;
   position: absolute;
-  align-items: center;
-  justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background: #152238;
   display: none;
   padding: 4rem;
@@ -343,18 +420,31 @@ span {
   position: absolute;
   right: 0;
   top: 9vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: 1px solid var(--uno-5);
 }
 .logo-col{
   width: 100%;
   height: 8rem;
   border-bottom: 1px solid var(--uno-5);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .logo-col p{
   font-size: 1.7rem;
@@ -365,7 +455,8 @@ span {
 .logo-col img{
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
   aspect-ratio: 1/1;
   margin-right: 10px;
 }
@@ -374,9 +465,15 @@ span {
   padding: 1rem 3rem;
   font-size: 1.3rem;
   border-bottom: 1px solid var(--uno-5);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: baseline;
-  column-gap: 1rem;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-column-gap: 1rem;
+     -moz-column-gap: 1rem;
+          column-gap: 1rem;
   color: var(--uno-1);
 }
 .col i{
@@ -403,6 +500,8 @@ span {
 }
 @media (max-width: 1200px) {
   .device-warning{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .modal{
@@ -423,9 +522,19 @@ span {
   .setting-container{
     margin-top: .5rem;
   }
+  .speed{
+    left: 28vw;
+    bottom: 54vh;
+  }
+  .acuracy{
+    right: 31vw;
+    bottom: 54vh;
+  }
 }
 @media (max-height: 700px) {
   .device-warning{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .modal{
