--- a/styles/profile.css
+++ b/styles/profile.css
@@ -193,3 +193,18 @@ html,body{
     display: flex;
   }
 }
+@media (max-width: 1900px){
+  .logo-col p{
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: var(--uno-1);
+    margin-left: 1rem;
+  }
+  .logo-col img{
+    width: 60%;
+    height: 60%;
+    -o-object-fit: contain;
+       object-fit: contain;
+    aspect-ratio: 1/1;
+  }
+}
