--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,17 +128,28 @@ html,body{
           column-gap: 1rem;
   margin-right: 2rem;
 }
-.right-header i{
-  font-size: 1.5rem;
-}
-.acc-btn{
-  font-size: 1.3rem;
+.log-out{
+  font-size: 1rem;
   font-weight: bolder;
   color: var(--duo-1);
   padding: .5rem 1rem;
   background: #152238;
   border-radius: 5rem;
-  border: 3px solid var(--duo-1);
+  border: 2px solid var(--duo-1);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: .5rem;
+}
+.acc-btn{
+  font-size: 1rem;
+  font-weight: bolder;
+  color: var(--duo-1);
+  padding: .5rem 1rem;
+  background: #152238;
+  border-radius: 5rem;
+  border: 2px solid var(--duo-1);
   cursor: pointer;
 }
 .hide-acc-btn{
