--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,10 @@ html,body{
           column-gap: 1rem;
   margin-right: 2rem;
 }
+.user-profile{
+  font-size: 1.3rem;
+  color: var(--duo-1);
+}
 .log-out{
   font-size: 1rem;
   font-weight: bolder;
